modificacoes componente visualizar3d

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
-    "root": true,
+    "root": false,
     "env": {
       "node": true
     },
@@ -36,7 +36,10 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "no-unused-vars": "off"
+      
+    }
   },
   "browserslist": [
     "> 1%",
